--- a/reveal.js-3.7.0/index.html
+++ b/reveal.js-3.7.0/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/simple.css">
+    <link rel="stylesheet" href="custom_theme.css">
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -31,10 +32,14 @@
         </section>
         <section>
             <h3>Bigger software == more bugs</h3>
-            <p>average bug density stayed constant</p>
-            <p>but average code volume increases exponentially</p>
-            <p>software steers evermore important processes in our society e.g. micro trading</p>
+            <ul>
+                <li>average bug density stayed constant</li>
+                <li class="space-below">but average code volume increases exponentially</li>
+                <li>software steers evermore important processes in our society e.g. micro trading</li>
+            </ul>
+            <ul>
 
+            </ul>
             <aside class="notes">
                 <p>
                     So far the headline is true. A study showed that the bug density over time stayed
@@ -59,23 +64,27 @@
         </section>
         <section>
             <h3>Automated software testing as a service (TaaS)</h3>
-            <p>fully automated testing by a service provider</p>
-            <p>on infrastructure managed by them</p>
-            <p>saving developing time and money</p>
-            <br>
-            <p>makes software reliability comparable and promotes open competition along this metric</p>
+            <ul>
+                <li>fully automated testing by a service provider</li>
+                <li>on managed infrastructure</li>
+                <li class="space-below">saving developing time and money</li>
+                <li>makes software reliability comparable and promotes open competition along this metric</li>
+            </ul>
         </section>
         <section>
             <h3>My objective: making TaaS tangible</h3>
-            <p>TaaS is a vision</p>
-            <p>it might seems far off and probably unrealistic</p>
-            <p></p>
-            <p>I present two papers as examples to illustrate solutions to some of TaaS challenges</p>
-            <ul>
-                <li>one possible implementation of TaaS by PaaS providers</li>
-                <li>a promising approach to one of the main technical challenges of TaaS</li>
+            <ul class="dashed">
+                <li>TaaS is a vision and might seems unrealistic or far-off</li>
+                <li class="space-below">but most of its challenges are subject of state of art research</li>
+                <li>The presented papers illustrate</li>
+                <ul>
+                    <li>one possible implementation of TaaS by PaaS providers</li>
+                    <li>a promising approach to make symbolic execution scalable on a share-nothing
+                        architecture
+                    </li>
+                </ul>
             </ul>
-            <p>These serve as examples of active research solving the challenges of TaaS</p>
+
             <aside class="notes">
                 <p>
                     My main question after reading the vision paper about Taas was: "Great story but
@@ -109,17 +118,55 @@
         </section>
         <section>
             <h3>Structure</h3>
+            <ol>
+            </ol>
         </section>
         <section>
             <h3>Symbolic Execution</h3>
         </section>
         <section>
-            <h3>TaaS by PaaS providers</h3>
-            <h4>One possible implementation of TaaS</h4>
-            <aside class="notes">
-                Introduction as one possible implementation instead of a definitive manual to it
-                that does not go into technical details
-            </aside>
+            <section>
+                <h3>TaaS by PaaS providers</h3>
+                <h4>One possible implementation of TaaS</h4>
+                <aside class="notes">
+                    Introduction as one possible implementation instead of a definitive manual to it
+                    that does not go into technical details
+                </aside>
+            </section>
+            <section>
+                <h3>TaaS by PaaS providers</h3>
+                <ul>
+                    <li>PaaS streamlines deploying from apps</li>
+                    <li class="space-below">PaaS providers are well positioned to also simplify the testing of apps</li>
+                    <li>They already provide the setup of dependencies for integration testing</li>
+                    <li>but leave the developer with the hard task to handcraft requests for each test scenario</li>
+                    <ul>
+                        <li>this is a tedious task even more so because of the layered architecture of modern web apps</li>
+                    </ul>
+                    <aside class="notes">
+                        <p>Message: the main idea of TaaS by Paas + why is it intuitively feasible</p>
+                        <p>Economically well positioned as well</p>
+                        <p>
+                            Example layers: HTTP parsing, URL dispatching, JSON parsing, Business logic,
+                            Test case only wants to exercise all paths in the business logic but needs to fulfill
+                            conditions at each layer
+                        </p>
+                        <p>This is the concrete problem of the presented approach</p>
+                        <p>Developers input: application + one testcase per input of the same structure and
+                        same assertations (e.g. no 500 error + all possible execution paths through one
+                        url handler</p>
+                    </aside>
+                </ul>
+            </section>
+            <section>
+
+                <aside class="notes">
+                    <p>Message: this is how a test case looks like and how it is executed</p>
+                </aside>
+            </section>
+            <section>
+
+            </section>
         </section>
     </div>
 </div>
