--- a/reveal.js-3.7.0/index.html
+++ b/reveal.js-3.7.0/index.html
@@ -236,9 +236,6 @@
 <script src="js/reveal.js"></script>
 
 <script>
-    // More info about config & dependencies:
-    // - https://github.com/hakimel/reveal.js#configuration
-    // - https://github.com/hakimel/reveal.js#dependencies
     Reveal.initialize({
         dependencies: [
             {src: 'plugin/markdown/marked.js'},
@@ -250,9 +247,14 @@
                 }
             }
         ],
+        controls: false,
         width: 1500,
-        margin: 0.05
+        margin: 0.05,
+        center: true,
+        transition: "slide"
     });
+    Reveal.configure({ slideNumber: true });
+    Reveal.configure({ slideNumber: 'c/t' });
 </script>
 </body>
 </html>
