All points start with small caps

--- a/reveal.js-3.7.0/index.html
+++ b/reveal.js-3.7.0/index.html
@@ -230,7 +230,7 @@ else:
                     </div>
                     <div class="col-50">
                         <ul>
-                            <li>Systems consists out of one coordinator (C) and multiple worker (R, S, T)</li>
+                            <li>systems consists out of one coordinator (C) and multiple worker (R, S, T)</li>
                             <li>one job == one execution state</li>
                             <li class="space-below">each worker maintains a work queue</li>
                             <li>they update the coordinator about the length of their queue (1)</li>
@@ -317,18 +317,18 @@ else:
             <section>
                 <h3>TaaS as a certification service</h3>
                 <ul>
-                    <li>Akin to Underwriters Lab, TÜV or the CE certification (without legal bearing)</li>
-                    <li>Provided by government, industrial consortia or by companies</li>
-                    <li>Early example is the Apple Store certification</li>
+                    <li>akin to Underwriters Lab, TÜV or the CE certification (without legal bearing)</li>
+                    <li>provided by government, industrial consortia or by companies</li>
+                    <li>early example is the Apple Store certification</li>
                 </ul>
             </section>
             <section>
                 <h3>Technical challenges and solutions</h3>
                 <ul>
-                    <li>Complete black box testing <b>but</b> research group presented feasibility by finding
+                    <li class="space-below">complete black box testing <i>but</i> research group presented feasibility by finding
                         14 bugs in 6 closed-source windows drivers with symbolic execution
                     </li>
-                    <li>Unclear testing results <b>but</b> symbolic execution provides input to reproduce the bugs found
+                    <li>unclear testing results <i>but</i> symbolic execution provides input to reproduce the bugs found
                     </li>
                 </ul>
             </section>
