Adds backup slide

--- a/reveal.js-3.7.0/index.html
+++ b/reveal.js-3.7.0/index.html
@@ -173,7 +173,7 @@ else:
                         <li>introduce test case</li>
                         <li>only first two points</li>
                         <li>go over it</li>
-                        <li>introduce parallel symboli and concrete</li>
+                        <li>introduce parallel symbolic and concrete</li>
                         <li>introduce negate path constraints</li>
                     </ul>
                 </aside>
@@ -273,7 +273,6 @@ else:
                                 <li><b>Fence states</b>: explored by another node</li>
                                 <li><b>Dead states</b>: completely explored</li>
                             </ul>
-
                         </ul>
                     </div>
                 </div>
@@ -342,6 +341,17 @@ else:
             <p><b>which will have strong positive impact on the reliability from software</b></p>
         </section>
         <section data-title="Backup: parallel symbolic execution">
+            <section>
+                <h3>Complete and non-redundant partitioning an intuition</h3>
+                <div class="box">
+                    <div class="col-50">
+                        <img src="img/partioning_cloud_9.png">
+                    </div>
+                    <div class="col-50">
+                        <img src="img/state_state_diagram.png">
+                    </div>
+                </div>
+            </section>
             <section>
                 <h3>Complete and non-redundant partitioning an intuition</h3>
                 <div class="box">
